add css for home task 7

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           type="button"
         >
           <svg class="modal-icon-close">
-            <use href="./images/modal-form-icons.svg#modal-icon-close"></use>
+            <use href="./images/modal-closing-icon.svg#modal-icon-close"></use>
           </svg>
         </button>
         <div class="mobile-menu-window">
@@ -359,7 +359,6 @@
           <h2 class="team-header">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <div class="team-caption">
                 <img
                   src="./images/mark-guerrero.jpg"
                   alt="Mark Guerrero"
@@ -424,10 +423,8 @@
                     </li>
                   </ul>
                 </div>
-              </div>
             </li>
             <li class="team-item">
-              <div class="team-caption">
                 <img
                   src="./images/tom-ford.jpg"
                   alt="Tom Ford"
@@ -492,10 +489,8 @@
                     </li>
                   </ul>
                 </div>
-              </div>
             </li>
             <li class="team-item">
-              <div class="team-caption">
                 <img
                   src="./images/camila-garcia.jpg"
                   alt="Camila Garcia"
@@ -560,10 +555,8 @@
                     </li>
                   </ul>
                 </div>
-              </div>
             </li>
             <li class="team-item">
-              <div class="team-caption">
                 <img
                   src="./images/daniel-wilson.jpg"
                   alt="Daniel Wilson"
@@ -628,13 +621,12 @@
                     </li>
                   </ul>
                 </div>
-              </div>
             </li>
           </ul>
         </div>
       </section>
       <section class="customers">
-        <div class="container">
+        <div class="container customers-container">
           <h2 class="customers-header">Customers</h2>
           <ul class="customers-icon-list list">
             <li class="customers-icon-item">
