--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
         </div>
       </section>
-      <!-- <section class="attitudes">
+      <section class="attitudes">
         <div class="container attitudes-container">
           <h2 class="visually-hidden">Company list of attitudes</h2>
           <ul class="attitudes-list list">
@@ -322,7 +322,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="products">
         <div class="container products-container">
           <h2 class="products-header">What are we doing</h2>
@@ -728,21 +728,23 @@
           </ul>
         </div>
         <form class="subscribe">
-          <p class="subscribe-title">Subscribe</p>
-          <div class="subscribe-form">
-            <input
-              class="subscribe-item"
-              type="email"
-              name="subscribe-email"
-              placeholder="E-mail"
-              required
-            />
-            <button class="subscribe-btn" type="submit">
-              Subscribe
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./images/subscribe-icon.svg#subscribe-icon"></use>
-              </svg>
-            </button>
+          <div class="subscribe-caption">
+            <p class="subscribe-title">Subscribe</p>
+            <div class="subscribe-form">
+              <input
+                class="subscribe-item"
+                type="email"
+                name="subscribe-email"
+                placeholder="E-mail"
+                required
+              />
+              <button class="subscribe-btn" type="submit">
+                Subscribe
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/subscribe-icon.svg#subscribe-icon"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </form>
       </div>
