--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link href="./css/mobile.css" rel="stylesheet" />
+    <link href="./css/tablet.css" rel="stylesheet" />
+    <link href="./css/desktop.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo">
@@ -29,7 +32,9 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link link">Studio</a>
+              <a href="./index.html" class="header-link link"
+                >Studio</a
+              >
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link active-page link"
@@ -56,7 +61,109 @@
           </ul>
         </address>
       </div>
-    </header> -->
+
+      <!-- ========================MOBILE-MENU==================== -->
+
+      <!--------------------- Button to open mobile header menue ------------------------>
+
+      <button type="button" class="header-burger-btn js-open-menu">
+        <svg class="header-burger-btn-svg" height="32" width="32">
+          <use
+            href="./images/mobile/icon-mobile-menu.svg#icon-mobile-menu"
+          ></use>
+        </svg>
+      </button>
+
+      <!--------------------- Button to close mobile header menue ------------------------>
+
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <button
+          class="mobile-btn-modal-close js-close-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+          type="button"
+        >
+          <svg class="modal-icon-close">
+            <use href="./images/modal-closing-icon.svg#modal-icon-close"></use>
+          </svg>
+        </button>
+        <div class="mobile-menu-window">
+          <ul class="mobile-menu-list list">
+            <li class="menu-item">
+              <a
+                href="./index.html"
+                class="mobile-menu-item-link mobile-active-pages link"
+                >Studio</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="mobile-menu-item-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="menu-item">
+              <a href="#" class="mobile-menu-item-link link">Contacts</a>
+            </li>
+          </ul>
+          <address class="mobile-address">
+            <ul class="contact list">
+              <li class="contact-item">
+                <a href="tel:+110001111111" class="contact-item-number link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="contact-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contact-item-mail link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="photo-caption-soc-list list">
+              <li class="photo-caption-soc-item">
+                <a href="" class="photo-caption-soc-link link">
+                  <svg class="photo-caption-soc-icon" width="16" height="16">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-instagram-2-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="photo-caption-soc-item">
+                <a href="" class="photo-caption-soc-link link">
+                  <svg class="photo-caption-soc-icon" width="16" height="16">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-twitter-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="photo-caption-soc-item">
+                <a href="" class="photo-caption-soc-link link">
+                  <svg class="photo-caption-soc-icon" width="16" height="16">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-facebook-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="photo-caption-soc-item">
+                <a href="" class="photo-caption-soc-link link">
+                  <svg class="photo-caption-soc-icon" width="16" height="16">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-linkedin-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+
+      <!-------------- finish  ---------------->
+    </header>
     <main>
       <section class="portfolio">
         <div class="container portfolio-container">
@@ -312,77 +419,82 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-block-one">
-          <a href="./index.html" class="footer-logo"
-            ><span class="footer-logo-web-text">Web</span>Studio</a
-          >
-          <p class="footer-title">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="social-media">
-          <h2 class="social-media-header">Social media</h2>
-          <ul class="social-media-list list">
-            <li class="social-media-item">
-              <a href="" class="social-media-link link">
-                <svg class="social-media-icon" width="24" height="24">
-                  <use
-                    href="./images/team-soc-icons.svg#icon-instagram-2-1"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="" class="social-media-link link">
-                <svg class="social-media-icon" width="24" height="24">
-                  <use
-                    href="./images/team-soc-icons.svg#icon-twitter-1-1"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="" class="social-media-link link">
-                <svg class="social-media-icon" width="24" height="24">
-                  <use
-                    href="./images/team-soc-icons.svg#icon-facebook-1-1"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-media-item">
-              <a href="" class="social-media-link link">
-                <svg class="social-media-icon" width="24" height="24">
-                  <use
-                    href="./images/team-soc-icons.svg#icon-linkedin-1-1"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="test">
+          <div class="footer-block-one">
+            <a href="./index.html" class="footer-logo"
+              ><span class="footer-logo-web-text">Web</span>Studio</a
+            >
+            <p class="footer-title">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-media">
+            <h2 class="social-media-header">Social media</h2>
+            <ul class="social-media-list list">
+              <li class="social-media-item">
+                <a href="" class="social-media-link link">
+                  <svg class="social-media-icon" width="24" height="24">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-instagram-2-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a href="" class="social-media-link link">
+                  <svg class="social-media-icon" width="24" height="24">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-twitter-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a href="" class="social-media-link link">
+                  <svg class="social-media-icon" width="24" height="24">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-facebook-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a href="" class="social-media-link link">
+                  <svg class="social-media-icon" width="24" height="24">
+                    <use
+                      href="./images/team-soc-icons.svg#icon-linkedin-1-1"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <form class="subscribe">
-          <p class="subscribe-title">Subscribe</p>
-          <div class="subscribe-form">
-            <input
-              class="subscribe-item"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-              required
-            />
-            <button class="subscribe-btn" type="submit">
-              Subscribe
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./images/subscribe-icon.svg#subscribe-icon"></use>
-              </svg>
-            </button>
+          <div class="subscribe-caption">
+            <p class="subscribe-title">Subscribe</p>
+            <div class="subscribe-form">
+              <input
+                class="subscribe-item"
+                type="email"
+                name="subscribe-email"
+                placeholder="E-mail"
+                required
+              />
+              <button class="subscribe-btn" type="submit">
+                Subscribe
+                <svg class="subscribe-icon" width="24" height="24">
+                  <use href="./images/subscribe-icon.svg#subscribe-icon"></use>
+                </svg>
+              </button>
+            </div>
           </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
