--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,7 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link link"
-                >Studio</a
-              >
+              <a href="./index.html" class="header-link link">Studio</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link active-page link"
@@ -208,6 +206,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/banking-app@2x.jpg 2x"
                       src="./images/banking-app.jpg"
                       alt="Banking App Interface Concept"
                       width="360"
@@ -233,6 +232,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/cashless-payment@2x.jpg 2x"
                       src="./images/cashless-payment.jpg"
                       alt="Cashless Payment"
                       width="360"
@@ -258,6 +258,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/meditation-app@2x.jpg 2x"
                       src="./images/meditation-app.jpg"
                       alt="Meditation App"
                       width="360"
@@ -281,6 +282,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/taxi-service@2x.jpg 2x"
                       src="./images/taxi-service.jpg"
                       alt="Taxi Service"
                       width="360"
@@ -304,6 +306,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/screen-illustrations@2x.jpg 2x"
                       src="./images/screen-illustrations.jpg"
                       alt="Screen Illustrations"
                       width="360"
@@ -329,6 +332,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/online-courses@2x.jpg 2x"
                       src="./images/online-courses.jpg"
                       alt="Online Courses"
                       width="360"
@@ -354,6 +358,9 @@
                       </p>
                     </div>
                     <img
+                      srcset="
+                        ./images/images-2x/instagram-stories-concept@2x.jpg 2x
+                      "
                       src="./images/instagram-stories-concept.jpg"
                       alt="Instagram Stories Concept"
                       width="360"
@@ -379,6 +386,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/organic-food@2x.jpg 2x"
                       src="./images/organic-food.jpg"
                       alt="Organic Food"
                       width="360"
@@ -402,6 +410,7 @@
                       </p>
                     </div>
                     <img
+                      srcset="./images/images-2x/fresh-coffee@2x.jpg 2x"
                       src="./images/fresh-coffee.jpg"
                       alt="Fresh Coffee"
                       width="360"
